--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,9 @@ django-heroku = "*"
 gunicorn = "*"
 psycopg2 = "*"
 django-cors-headers = "*"
+environ = "*"
+django-environ = "*"
+setuptools = "*"
 
 [dev-packages]
 
